--- a/about.html
+++ b/about.html
@@ -13,32 +13,22 @@
   <nav>
     <ul>
       <li><a tabindex="1" class="go-back"><i class="fas fa-step-backward"></i>Back</a></li>
-      <li class="mute"><a tabindex="1"><i id="sound-off" class="fas fa-volume-mute"></i><i id="sound-on" class="fas fa-volume-up"></i></a></li>
     </ul>
   </nav>
-  <iframe src="audio/silent.wav" allow="autoplay" style="display:none">
-  </iframe>
-  <audio autoplay loop>
-    <source src="audio/Whimsical-Popsicle.wav" type="audio/wav">
-    </audio>
-    <main class="page-overview" >
-      <section class="blackboard" id="about-page">
-        <img src="images/drAboutToon.png" alt="Dr Frankenstein">
-        <h2>About</h2>
 
-        <ul id="references">
-          <p>Built to teach little humans about some basic Computer components.</p>
-          <li>(Story) Shelley, Mary Wollstonecraft, 1797-1851. (1998). Frankenstein, or, The modern Prometheus : the 1818 text. Oxford ; New York :Oxford University Press.</li>
-          <li>(Music) Matyas, Eric. Blob-Monsters-on-the-Loose, Crystal-Caverns
-            , Game-Menu_v001, Insert-Quarter, Trancyvania, Whimsical-Popsicle[music].
-            Retrieved from  <a href="https://soundimage.org" target="_blank">www.soundimage.org</a></li>
-          <li>(Item\Vector Images) Vector Art. Public Domain Vectors [image]. Retrieved from <a href="https://publicdomainvectors.org/" target="_blank">www.publicdomainvectors.org</a></li>
-
-        </ul>
-        <p>Coded by Daniel Berger with HTML5, CSS3 and jQuery.</p>
-      </section>
-    </main>
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/script.js"></script>
-  </body>
-  </html>
+  <main class="page-overview" >
+    <section class="blackboard" id="about-page">
+      <img src="images/drAboutToon.png" alt="Dr Frankenstein">
+      <h2>About</h2>
+      <ul id="references">
+        <p id="reason">Built to teach little humans about some basic Computer components.</p>
+        <li>(Story) Shelley, Mary Wollstonecraft, 1797-1851. (1998). Frankenstein, or, The modern Prometheus : the 1818 text. Oxford ; New York :Oxford University Press.</li>
+        <li>(Item\Vector Images) Vector Art. Public Domain Vectors [image]. Retrieved from <a href="https://publicdomainvectors.org/" target="_blank">www.publicdomainvectors.org</a></li>
+      </ul>
+      <p>Coded by Daniel Berger with HTML5, CSS3 and jQuery.</p>
+    </section>
+  </main>
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/script.js"></script>
+</body>
+</html>
