Removed Dr Frankenstein images

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
   <title>About this website</title>
@@ -7,8 +8,10 @@
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
+
 <body>
   <nav>
     <ul>
@@ -16,19 +19,16 @@
     </ul>
   </nav>
 
-  <main class="page-overview" >
+  <main class="page-overview">
     <section class="blackboard" id="about-page">
-      <img src="images/drAboutToon.png" alt="Dr Frankenstein">
+
       <h2>About</h2>
-      <ul id="references">
-        <p id="reason">Built to teach little humans about some basic Computer components.</p>
-        <li>(Story) Shelley, Mary Wollstonecraft, 1797-1851. (1998). Frankenstein, or, The modern Prometheus : the 1818 text. Oxford ; New York :Oxford University Press.</li>
-        <li>(Item\Vector Images) Vector Art. Public Domain Vectors [image]. Retrieved from <a href="https://publicdomainvectors.org/" target="_blank">www.publicdomainvectors.org</a></li>
-      </ul>
+      <p>Built to teach little humans about some basic Computer components.</p>
       <p>Coded by Daniel Berger with HTML5, CSS3 and jQuery.</p>
     </section>
   </main>
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/script.js"></script>
 </body>
+
 </html>
