--- a/learning.html
+++ b/learning.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
   <title>Learning Computer Components</title>
@@ -8,8 +9,10 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/learning.css">
   <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
+
 <body>
   <nav>
     <ul>
@@ -26,8 +29,9 @@
     </div>
     <section>
       <div class="blackboard">
-        <img src="images/drExactlyToon.png" alt="Dr Frankenstein talking.">
-        <p>Hello <span id="user-name"></span>! You may call me Dr Frankenstein. I'm a scientist and I need your help. To help me,
+
+        <p>Hello <span id="user-name"></span>! You may call me Dr Frankenstein. I'm a scientist and I need your help. To
+          help me,
           learn the parts of a Computer and pass a quiz. Then I will be able
           to bring my monsters, uh, creations to life.
         </p>
@@ -63,7 +67,7 @@
         <a id="quiz-link" href="quiz.html">Quiz</a>
         <aside id="information">
           <div id="inf-info">
-            <p >Click on any part on the left hand side to learn about it!</p>
+            <p>Click on any part on the left hand side to learn about it!</p>
           </div>
           <div class="information" id="cpu-info">
             <h3>CPU - Central Processing Unit</h3>
@@ -88,7 +92,8 @@
           <div class="information" id="mbd-info">
             <h3>MBD - Motherboard</h3>
             <hr>
-            <p>The motherboard is like the skeleton of my creation. In a computer, it allows everything else to communicate and work together.
+            <p>The motherboard is like the skeleton of my creation. In a computer, it allows everything else to
+              communicate and work together.
             </p>
             <div class="info-image">
               <img src="images/skeleton.png" alt="Skeleton.">
@@ -97,7 +102,8 @@
           <div class="information" id="psu-info">
             <h3>PSU - Power Supply Unit</h3>
             <hr>
-            <p>Like my creations need energy from food, the computer needs electricity as its food, which it gets from the PSU.
+            <p>Like my creations need energy from food, the computer needs electricity as its food, which it gets from
+              the PSU.
             </p>
             <div class="info-image">
               <img src="images/food.png" alt="A stomach digesting.">
@@ -106,7 +112,8 @@
           <div class="information" id="hdd-info">
             <h3>HDD - Hard Drive Disk</h3>
             <hr>
-            <p>This is like the long-term memory of my monsters. I don't want them to forget who I am. A computer uses this to store information you want to save for later.
+            <p>This is like the long-term memory of my monsters. I don't want them to forget who I am. A computer uses
+              this to store information you want to save for later.
             </p>
             <div class="info-image">
               <img src="images/thinking.png" alt="Side profile of someone thinking.">
@@ -115,7 +122,8 @@
           <div class="information" id="gpu-info">
             <h3>GPU - Graphics Processing Unit</h3>
             <hr>
-            <p>Commonly called a Video Card, the video card makes things look good on your screen. Like my creation's eyes, the better they are, the better they see.
+            <p>Commonly called a Video Card, the video card makes things look good on your screen. Like my creation's
+              eyes, the better they are, the better they see.
             </p>
             <div class="info-image">
               <img src="images/eyes.png" alt="A pair of eyes.">
@@ -128,4 +136,5 @@
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/script.js"></script>
 </body>
+
 </html>
