--- a/lose.html
+++ b/lose.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
   <title>Computer Quiz Results</title>
@@ -8,8 +9,10 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/winlose.css">
   <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
+
 <body>
   <nav>
     <ul>
@@ -24,20 +27,11 @@
       <p>You got <span id="score"></span> out of 5 questions correct</p>
       <a id="try-again" href="learning.html#learning">Try Again</a>
     </section>
-    <img id="drFailToon" src="images/drFailToon.png" alt="Dr Frankenstein giving you the thumbs up.">
-    <section class="drop">
-      <img src="images/drop.png" alt="Drop">
-      <img src="images/drop.png" alt="Drop">
-      <img src="images/drop.png" alt="Drop">
-      <img src="images/drop.png" alt="Drop">
-      <img src="images/drop.png" alt="Drop">
-      <img src="images/drop.png" alt="Drop">
-      <img src="images/drop.png" alt="Drop">
-      <img src="images/drop.png" alt="Drop">
-      <img src="images/drop.png" alt="Drop">
-    </section>
+
+
   </main>
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/script.js"></script>
 </body>
+
 </html>
