--- a/quiz.html
+++ b/quiz.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
   <title>Frankenstein's Quiz</title>
@@ -8,8 +9,10 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/quiz.css">
   <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
+
 <body>
   <nav>
     <ul>
@@ -20,12 +23,13 @@
 
   <main class="page-overview">
     <section class="blackboard">
-      <img id="drToon" src="images/drPointToon.png" alt="Dr Frankenstein pointing.">
+
       <form action="index.html" method="post">
         <fieldset>
           <legend>Computer Component Quiz</legend>
           <div class="form-item">
-            <label class="question" for="question1"><i class="fab fa-quora">.</i> What is considered the brain of the computer?</label>
+            <label class="question" for="question1"><i class="fab fa-quora">.</i> What is considered the brain of the
+              computer?</label>
             <div class="form-element">
               <label for="q1a1">
                 <input tabindex="4" type="radio" id="q1a1" name="answer1" class="radio" value="silly">Smelly cheese
@@ -53,7 +57,8 @@
             </div>
           </div>
           <div class="form-item">
-            <label class="question" for="question3"><i class="fab fa-quora">.</i> What part is like short term memory?</label>
+            <label class="question" for="question3"><i class="fab fa-quora">.</i> What part is like short term
+              memory?</label>
             <div class="form-element">
               <label for="q3a1">
                 <input type="radio" id="q3a1" name="answer3" class="radio" value="hdd">HDD
@@ -67,7 +72,8 @@
             </div>
           </div>
           <div class="form-item">
-            <label class="question" for="question4"><i class="fab fa-quora">.</i> What connects all the parts and allows them to communicate?</label>
+            <label class="question" for="question4"><i class="fab fa-quora">.</i> What connects all the parts and allows
+              them to communicate?</label>
             <div class="form-element">
               <label for="q4a1">
                 <input type="radio" id="q4a1" name="answer4" class="radio" value="mbd">Motherboard
@@ -81,7 +87,8 @@
             </div>
           </div>
           <div class="form-item">
-            <label class="question" for="question5"><i class="fab fa-quora">.</i> What does a computer need to make things look good?</label>
+            <label class="question" for="question5"><i class="fab fa-quora">.</i> What does a computer need to make
+              things look good?</label>
             <div class="form-element">
               <label for="q5a1">
                 <input type="radio" id="q5a1" name="answer5" class="radio" value="psu">Power Supply
@@ -119,4 +126,5 @@
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/script.js"></script>
 </body>
+
 </html>
