Update to title

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   <main class="page-overview">
     <section class="blackboard">
 
-      <h1>Dr Frankenstein's Computer Quiz</h1>
-      <p>Learn about the main parts of a computer with Dr Frankenstein.</p>
+      <h1>Computer Hardware Basics</h1>
+      <p>Learn about the main parts of a computer.</p>
       <p>For best experience use Chrome or Firefox with an iPad sized screen or larger.</p>
       <noscript>
         <p><i class="fas fa-exclamation-triangle"></i> Please enable Javascript to use this website.</p>
