Updated component descriptions

--- a/learning.html
+++ b/learning.html
@@ -30,10 +30,9 @@
     <section>
       <div class="blackboard">
 
-        <p>Hello <span id="user-name"></span>! You may call me Dr Frankenstein. I'm a scientist and I need your help. To
-          help me,
-          learn the parts of a Computer and pass a quiz. Then I will be able
-          to bring my monsters, uh, creations to life.
+        <p>Hello <span id="user-name"></span>! You may call me Dr Tech. I'm a scientist and I have need of a Computer
+          assistant. To make sure you can help me,
+          learn the parts of a Computer and pass a quiz!
         </p>
       </div>
       <a tabindex="4" href="#learning">
@@ -72,8 +71,9 @@
           <div class="information" id="cpu-info">
             <h3>CPU - Central Processing Unit</h3>
             <hr>
-            <p>This is like my Monster's brains. It allows them to make decisions and decide what to do...
-              With this a computer can make decisions.
+            <p>Think of the CPU as the computer's brain because it does all the thinking and problem-solving. It takes
+              in information, makes quick decisions, and sends out commands so the computer knows exactly what to do
+              next.
             </p>
             <div class="info-image">
               <img src="images/brain-real.png" alt="A human brain.">
@@ -82,8 +82,9 @@
           <div class="information" id="ram-info">
             <h3>RAM - Random Access Memory</h3>
             <hr>
-            <p>I can't have my creations forgetting everything all the time.
-              RAM is like their short-term memory. Computers need RAM to think about decisions.
+            <p>RAM is like your short-term memory because it holds onto the specific things you are thinking about right
+              this second, like a math problem you are doing in your head. It helps the computer work fast, but just
+              like a thought can pop out of your head, everything in RAM disappears the moment the computer turns off.
             </p>
             <div class="info-image">
               <img src="images/idea.png" alt="Someone having an idea.">
@@ -92,8 +93,11 @@
           <div class="information" id="mbd-info">
             <h3>MBD - Motherboard</h3>
             <hr>
-            <p>The motherboard is like the skeleton of my creation. In a computer, it allows everything else to
-              communicate and work together.
+            <p>The motherboard is like your bones and nerves because it holds all the computer parts together and
+              connects them so they can talk to each other.
+              <br>
+              Just like your bones give your body shape and your nerves carry messages from your brain, the
+              motherboard keeps everything in place and has little electrical pathways to connect the parts.
             </p>
             <div class="info-image">
               <img src="images/skeleton.png" alt="Skeleton.">
@@ -112,8 +116,8 @@
           <div class="information" id="hdd-info">
             <h3>HDD - Hard Drive Disk</h3>
             <hr>
-            <p>This is like the long-term memory of my monsters. I don't want them to forget who I am. A computer uses
-              this to store information you want to save for later.
+            <p>Just like you remember your birthday or a fun vacation from last year, the hard drive keeps all your
+              photos, games, and drawings safe so they are still there when you turn the computer back on.
             </p>
             <div class="info-image">
               <img src="images/thinking.png" alt="Side profile of someone thinking.">
@@ -122,8 +126,8 @@
           <div class="information" id="gpu-info">
             <h3>GPU - Graphics Processing Unit</h3>
             <hr>
-            <p>Commonly called a Video Card, the video card makes things look good on your screen. Like my creation's
-              eyes, the better they are, the better they see.
+            <p>Just like your eyes let you see the world in bright colors and moving shapes, the GPU works hard to draw
+              all the pictures, movies, and cool explosions you see in your video games so they look real.
             </p>
             <div class="info-image">
               <img src="images/eyes.png" alt="A pair of eyes.">
