--- a/lose.html
+++ b/lose.html
@@ -8,7 +8,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/winlose.css">
-  <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600;700&family=Nunito:wght@400;600;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
@@ -23,7 +25,7 @@
 
   <main class="page-overview">
     <section class="result-message" id="lose">
-      <h2>Bad luck <span id="user-name"></span></h2>
+      <h2>That's too bad, nice try <span id="user-name"></span>!</h2>
       <p>You got <span id="score"></span> out of 5 questions correct</p>
       <a id="try-again" href="learning.html#learning">Try Again</a>
     </section>
