--- a/win.html
+++ b/win.html
@@ -8,7 +8,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/winlose.css">
-  <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600;700&family=Nunito:wght@400;600;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
@@ -24,7 +26,7 @@
   <main class="page-overview">
     <section class="result-message" id="win">
       <h2>Congratulations <span id=user-name></span>!</h2>
-      <p>Now my creations can come to life, look at them go!</p>
+      <p>You're now my assistant, but this is just the start of your journey!</p>
       <p>You got <span id="score"></span> out of 5 questions correct!</p>
       <p>Learn more about computers <a id="learn-more" href="https://en.wikipedia.org/wiki/Computer"
           target="_blank">here.</a></p>
