Forgot About text update

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
       <h2>About</h2>
       <p>Built to teach little humans about some basic Computer components.</p>
-      <p>Coded by Daniel Berger with HTML5, CSS3 and jQuery.</p>
+      <p>Coded by Daniel Berger with HTML5, CSS3 and Javascript.</p>
     </section>
   </main>
 
