--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149261162-2"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R0P06RTYBY"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'UA-149261162-2');
+    gtag('config', 'G-R0P06RTYBY');
   </script>
 
   <meta name="author" content="Daniel Berger">
