--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <meta name="author" content="Daniel Berger">
   <meta charset="utf-8">
-  <title>Frankenstein's Computer Quiz</title>
+  <title>Computer Hardware Basics</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
