Added portfolio links

--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
       <h2>About</h2>
       <p>Built to teach little humans about some basic Computer components.</p>
       <p>Coded by Daniel Berger with HTML5, CSS3 and Javascript.</p>
+      <p>Check out <a href="https://bergercode.com" target="_blank">bergercode.com</a> for more projects like this!</p>
     </section>
   </main>
 
